fix overflow issue from svg position

--- a/src/index.css
+++ b/src/index.css
@@ -47,13 +47,13 @@
 
 /* start make and merge sell & fraud & market & payment component style */
 .fourComponentContainer {
-  @apply flex flex-row-reverse items-start justify-between w-full px-8 mx-auto my-60 mdMax:!flex-col mdMax:my-20 mdMax:px-6 mdMax:items-center;
+  @apply flex items-start justify-between px-8 mx-auto my-60 mdMax:!flex-col mdMax:my-20 mdMax:px-6 mdMax:items-center;
 }
 .fourComponentContainer-imgs {
   @apply relative max-w-[520px] w-[45%] flex items-end mdMax:w-full mdMax:mt-12 mdMax:ml-auto;
 }
 .fourComponentContainer-imgs_first {
-  @apply absolute -z-10 top-[-2rem] object-cover max-w-3xl w-full transform scale-125;
+  @apply absolute -z-10 top-[-2rem] right-60;
 }
 .fourComponentContainer-imgs_sec {
   @apply object-cover w-full max-w-md pt-8 rounded-lg;
@@ -74,7 +74,7 @@
   @apply w-[calc(50%-2rem)] cursor-pointer mdMax:w-full;
 }
 .fourComponentContainer-itemsContainer i {
-  @apply mb-5 mdMax:text-sm mdMax:mb-3;
+  @apply mb-5 text-xl mdMax:text-sm mdMax:mb-3;
 }
 .fourComponentContainer-itemsContainer h2 {
   @apply mb-4 text-xl font-bold leading-6 mdMax:text-base mdMax:leading-5 mdMax:mb-3 mdMax:font-semibold;
